feat(docker): add production-ready containerization with security hardening
Docker Infrastructure:
- Multi-stage Dockerfile with non-root user (app:appgroup)
- Dynamic Prisma symlink resolution (version-agnostic)
- Entrypoint script with wait-for-db and auto-migrations
- Production docker-compose with env_file and healthchecks
- Development override with hot-reload and debug port
- Template .env.docker.example (credentials not tracked)

Prisma Migration:
- Changed imports from @prisma/client to @generated/prisma
- Updated tsconfig.json path aliases

Security Fixes:
- Removed hardcoded Prisma version in symlink
- Added .env.docker to .gitignore
- Healthcheck uses environment variables ($$POSTGRES_USER)

Documentation:
- Added docs/docker/SETUP.md with troubleshooting guide
- Updated README.md Docker section
- Added docs/software-version/v1/SENTINEL-GRAPHQL-API.md
- Fixed API docs port from 3000 to 4000

--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   },
   "scripts": {
     "build": "nest build",
+    "docker:dev": "docker compose up",
+    "docker:build": "docker compose build",
+    "docker:up": "docker compose -f docker-compose.yml up -d",
+    "docker:down": "docker compose down",
+    "docker:logs": "docker compose logs -f",
+    "docker:clean": "docker compose down -v",
     "tsc": "tsc --noEmit",
     "tsc:watch": "tsc --noEmit --watch",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
