--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,56 @@
-version: '3.9'
+networks:
+  sentinel-network:
+    driver: bridge
 
 services:
   postgres:
     image: postgres:16-alpine
     container_name: sentinel-postgres
     restart: unless-stopped
-    environment:
-      POSTGRES_USER: sentinel_user
-      POSTGRES_PASSWORD: sentinel_pass
-      POSTGRES_DB: sentinel_db
+    networks:
+      - sentinel-network
+    env_file:
+      - .env.docker
     ports:
       - "5433:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U sentinel_user -d sentinel_db"]
+      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
       interval: 10s
       timeout: 5s
       retries: 5
       start_period: 10s
+    labels:
+      - "com.sentinel.description=PostgreSQL database for Sentinel"
+      - "com.sentinel.service=database"
 
   backend:
     build:
       context: .
       dockerfile: Dockerfile
     container_name: sentinel-backend
+    restart: unless-stopped
+    networks:
+      - sentinel-network
+    env_file:
+      - .env.docker
     ports:
       - "4000:4000"
-    environment:
-      NODE_ENV: production
-      PORT: 4000
-      DATABASE_URL: postgresql://sentinel_user:sentinel_pass@postgres:5432/sentinel_db?schema=public
-      LOG_LEVEL: info
     depends_on:
       postgres:
         condition: service_healthy
-    restart: unless-stopped
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:4000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 10s
+    labels:
+      - "com.sentinel.description=Sentinel Backend API"
+      - "com.sentinel.service=backend"
 
 volumes:
   postgres_data:
+    labels:
+      - "com.sentinel.description=PostgreSQL data volume"
